cmake_minimum_required(VERSION 4.0)
project(C C)

set(CMAKE_C_STANDARD 11)

add_executable(C
        c1.c
        c10.c
        c11.c
        c12.c
        c13.c
        c14_forloop.c
        c2_conversational_charctors.c
        c3_integer_var.c
        c4.c
        c5.c
        c6.c
        c7.c
        c8.c
        c9.c
        circle_area.c
        control_string_1.c
        control_string_2.c
        double_float.c
        if_1.c
        if_2.c
        simple_calculator.c
        slicing.c
        var.c
        variables.c)
